# vs_2019_cmake_issues

./: .gitignore  CMakeLists.txt  CMakePresets.json  azure-pipelines-1.yml  vcpkg-configuration.json  vcpkg.json
SQL/Schema/: 00.DBInit.sql  01.TSTables.sql
SQL/Stored-Procedures/: 00.CoreProcedures.sql
cmake/: some_module.cmake
docker/: BuildBase.Dockerfile  Cache.Dockerfile  Calculation.Dockerfile  ModelStorage.Dockerfile  PreinstPkgTargets.txt  Storage.Dockerfile  Temp.Dockerfile  TimeSeriesStorage.Dockerfile
src/: CMakeLists.txt
src/ClientTestApps/: CMakeLists.txt
src/ClientTestApps/CacheClient/: CMakeLists.txt
src/ClientTestApps/CacheClient/Source/: CacheSvcClient.cpp  CacheSvcClient.h  main.cpp
src/ClientTestApps/CacheSvcClient/: CMakeLists.txt
src/ClientTestApps/CacheSvcClient/Source/: CacheSvcClient.cpp  CacheSvcClient.h  main.cpp
src/ClientTestApps/TSStorageClient/: CMakeLists.txt
src/ClientTestApps/TSStorageClient/Source/: ReadTest.cpp  TSStorageClient.cpp  TSStorageClient.h  WriteTest.cpp  main.cpp
src/Libraries/: CMakeLists.txt
src/Libraries/Calculation/: CMakeLists.txt
src/Libraries/Calculation/include/Calc/: Calculation.h
src/Libraries/Common/: CMakeLists.txt
src/Libraries/Common/Source/Core/: TimePoint.cpp
src/Libraries/Common/Source/TimeSeries/: TSPoint.cpp  TimeSeries.cpp
src/Libraries/Common/include/Common/Core/: TimePoint.h
src/Libraries/Common/include/Common/TimeSeries/: TSPoint.h  TimeSeries.h
src/Libraries/DataCache/: CMakeLists.txt
src/Libraries/DataCache/Source/: DataCache.cpp
src/Libraries/DataCache/include/DataCache/: DataCache.h  IDataCache.h
src/Libraries/Storage/: CMakeLists.txt
src/Libraries/Storage/Models/: CMakeLists.txt
src/Libraries/Storage/Models/Source/: Storage.cpp
src/Libraries/Storage/Source/: Storage.cpp
src/Libraries/Storage/TimeSeries/: CMakeLists.txt
src/Libraries/Storage/TimeSeries/Source/: Storage.cpp
src/Libraries/Storage/TimeSeries/include/TimeSeriesStorage/: Storage.h
src/Services/: CMakeLists.txt
src/Services/Cache/: CMakeLists.txt
src/Services/Cache/CalculationResult/: CMakeLists.txt
src/Services/Cache/TimeSeries/: CMakeLists.txt
src/Services/Cache/TimeSeries/Service/Source/: CacheSvc.cpp  CacheSvc.h  main.cpp
src/Services/Cache/TimeSeries/Tests/Source/: DataCacheMockSample.cpp  DataCacheParametrizedTests.cpp  main.cpp
src/Services/CacheSvc/: CMakeLists.txt
src/Services/CacheSvc/Source/: CacheSvc.cpp  CacheSvc.h  main.cpp
src/Services/Calculation/Service/: CMakeLists.txt
src/Services/Calculation/Service/Source/: CalculationSvc.cpp
src/Services/CalculationSvc/: CMakeLists.txt
src/Services/CalculationSvc/Source/: CalculationSvc.cpp
src/Services/Storage/: CMakeLists.txt  Storage.cpp
src/Services/Storage/Models/: CMakeLists.txt
src/Services/Storage/Models/Service/: CMakeLists.txt
src/Services/Storage/Models/Service/Source/: StorageSvc.cpp
src/Services/Storage/ModelsStorageSvc/: CMakeLists.txt
src/Services/Storage/ModelsStorageSvc/Source/: StorageSvc.cpp
src/Services/Storage/TimeSeries/: CMakeLists.txt
src/Services/Storage/TimeSeries/Service/: CMakeLists.txt
src/Services/Storage/TimeSeries/Service/Source/: StorageSvc.cpp  StorageSvc.h  main.cpp
src/Services/Storage/TimeSeries/Tests/: CMakeLists.txt
src/Services/Storage/TimeSeries/Tests/CoachDB/: CMakeLists.txt
src/Services/Storage/TimeSeries/Tests/Postgres/: CMakeLists.txt
src/Services/Storage/TimeSeries/Tests/Postgres/Source/: TimeSeriesStorageTests.cpp
src/Services/Storage/TimeSeriesStorageSvc/: CMakeLists.txt
src/Services/Storage/TimeSeriesStorageSvc/Source/: StorageSvc.cpp  StorageSvc.h  main.cpp
src/Services/StorageSvc/: CMakeLists.txt
src/Services/StorageSvc/Source/: StorageSvc.cpp
src/proto/Cache/: data_cache.proto
src/proto/Calculation/: calculation.proto
src/proto/Common/: core_types.proto  timeseries.proto
src/proto/Storage/: storage.proto  timeseries_storage.proto
templates/: build_image.template.yml  push_image.template.yml
tests/: CMakeLists.txt
tests/Calculation/: CMakeLists.txt
tests/DataCache/: CMakeLists.txt
tests/DataCache/Source/: DataCacheMockSample.cpp  DataCacheParametrizedTests.cpp  main.cpp
tests/Storage/: CMakeLists.txt
tests/Storage/TimeSeries/: CMakeLists.txt
tests/Storage/TimeSeries/Source/: TimeSeriesStorageTests.cpp
